cargo-features = ["profile-rustflags"]

[package]
name = "sfml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suif = { path = "../../" }
rand = "0.8.5"
sfml = "0.21.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# strip = true
rustflags = ["-Ctarget-cpu=native"]
panic = "abort"
